1.6.3
- Fixed bug on book 1 / sect246: Drop 2 Crowns
- Fixed bug on book 5 / sect23: Lose 1 E.P.
- Fixed bug choosing CS / EP: Book language inconsistencies: Spanish books say "ignore zero", English does not