@@ -284,6 +284,7 @@
       <script src="js/controller/mechanics/setupMechanics.js"></script>
       <script src="js/controller/mechanics/specialSectionsMechanics.js"></script>
       <script src="js/controller/mechanics/numberPickerMechanics.js"></script>
+      <script src="js/ts-generated/controller/mechanics/setupDisciplines.js"></script>
       
       <!-- UI utilities -->
       <script src="js/views/viewsUtils/numberPicker.js"></script>
