@@ -51,110 +51,6 @@ var setupMechanics = {
 
     },
 
-    /**
-     * Choose the kai disciplines UI
-     * TODO: Too complex, move to another namespace and split it on different functions
-     * TODO: Use getRandomValueAsync on weaponSkill discipline
-     */
-    setDisciplines: function() {
-
-        // Number of disciplines to choose (previous book disciplines + 1, or 5):
-        var expectedNDisciplines = 5;
-        var previousActionChart = state.getPreviousBookActionChart( state.book.bookNumber - 1);
-        if( previousActionChart )
-            expectedNDisciplines = previousActionChart.disciplines.length + 1;
-
-        // All disciplines selected?
-        var allSelected = function() { 
-            return state.actionChart.disciplines.length >= expectedNDisciplines;
-        };
-
-        // Weapon skill choose
-        var setWeaponSkillName = function() {
-            var o = state.mechanics.getObject( state.actionChart.weaponSkill );
-            $('#wepnskll .mechanics-wName').text('(' + o.name + ')');
-        };
-        var chooseWeaponFunction = function() {
-            if( state.actionChart.weaponSkill )
-                return state.actionChart.weaponSkill;
-            var wTable = [ 'dagger' , 'spear' , 'mace' , 'shortsword' , 'warhammer', 'sword',
-                'axe' , 'sword' , 'quarterstaff' , 'broadsword' ];
-            var value = randomTable.getRandomValue();
-            state.actionChart.weaponSkill = wTable[ value ];
-            setWeaponSkillName();
-            $('#wepnskll .well').append('<div><i><small>' + translations.text('randomTable') + ': ' + value + 
-                '</small></i></div>');
-            return state.actionChart.weaponSkill;
-        };
-
-        // Add the warning about the number of disciplines:
-        gameView.appendToSection( mechanicsEngine.getMechanicsUI('mechanics-setDisciplines-NDis') );
-        $('#mechanics-nDisciplines').text( expectedNDisciplines );
-        if( allSelected() ) {
-            $('#mechanics-setDisciplines-NDis').hide();
-            gameView.enableNextLink(true);
-        }
-        else
-            gameView.enableNextLink(false);
-
-        // Add checkbox for each discipline:
-        $('.subsection').append( mechanicsEngine.getMechanicsUI('mechanics-setDisciplines') )
-        .each(function(index, $disciplineSection) {
-            // Set the discipline name on the checkbox
-            var $title = $(this).find( '.subsectionTitle' );
-            $(this).find( '.mechanics-dName' ).text( $title.text() );
-
-            // Set checkbox initial value
-            var disciplineId = $(this).attr('id');
-            var $check = $(this).find( 'input[type=checkbox]' ); 
-            $check.attr('checked' , state.actionChart.disciplines.contains(disciplineId) );
-
-            // If the player had this discipline on the previous book, disable the check
-            // On debug mode, always enabled
-            if( !window.getUrlParameter('debug') && previousActionChart && 
-                previousActionChart.disciplines.contains(disciplineId) )
-                $check.prop( 'disabled' , true );
-
-        })
-        // Set events when checkboxes are clicked
-        .find('input[type=checkbox]')
-        .click(function(e) {
-
-            // Limit the number of disciplines. Unlimited on debug mode
-            var selected = $(this).prop( 'checked' );
-            if( selected && allSelected() && !window.getUrlParameter('debug') ) {
-                e.preventDefault();
-                alert( translations.text( 'maxDisciplines' , [expectedNDisciplines] ) );
-                return;
-            }
-            // Add / remove the discipline
-            var disciplineId = $(this).closest('.subsection').attr('id');
-            if( selected ) {
-                state.actionChart.disciplines.push( disciplineId );
-                if( disciplineId == 'wepnskll')
-                    // Choose the weapon
-                    chooseWeaponFunction();
-            }
-            else
-                state.actionChart.disciplines.removeValue( disciplineId );
-            // Update the UI
-            if( allSelected() ) {
-                $('#mechanics-setDisciplines-NDis').hide();
-                gameView.enableNextLink(true);
-            }
-            else {
-                $('#mechanics-setDisciplines-NDis').show();
-                gameView.enableNextLink(false);
-            }
-            template.updateStatistics();
-        });
-
-        // Set the already choosen weapon for the skill
-        if( state.actionChart.weaponSkill )
-            setWeaponSkillName();
-
-    },
-
     /** 
      * Choose equipment UI 
      */
